feat: ajustes de rota CSS/JS/imagens

--- a/public/client/views/servicos-eletroge.html
+++ b/public/client/views/servicos-eletroge.html
@@ -16,7 +16,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="public/img/favicon.ico" type="image/x-icon" />
     <title>Serviços - EletroGe</title>
-    <link rel="stylesheet" href="/public/client/style.css" />
+    <link rel="stylesheet" href="/client/style.css" />
 
     <link
     rel="stylesheet"
@@ -143,15 +143,15 @@
   </head>
   <body>
     <header>
-      <a href="index.html">
-        <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
+      <a href="/client/views/index.html">
+        <img src="/client/img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
       </a>
       <nav>
-        <a href="index.html"><i class="fas fa-home"></i> Início</a>
-        <a href="servicos-eletroge.html"
+        <a href="/client/views/index.html"><i class="fas fa-home"></i> Início</a>
+        <a href="/client/views/servicos-eletroge.html"
           ><i class="fas fa-tools"></i> Serviços</a
         >
-        <a href="contato-eletroge.html"
+        <a href="/client/views/contato-eletroge.html"
           ><i class="fas fa-envelope"></i> Contato</a
         >
       </nav>
@@ -159,7 +159,7 @@
 
     <section class="banner-principal">
       <img
-        src="../img/img-principal.jpg"
+        src="/client/img/img-principal.jpg"
         alt="Imagem Principal"
         class="img-principal"
       />
@@ -193,7 +193,7 @@
           <div class="quadro-banner">Segurança para edificações e vidas</div>
         </div>
         <div class="btn-wrapper-quadros">
-          <a href="obras-model.html">
+          <a href="/client/views/obras-model.html">
             <button class="botao-andamento" style="width: 500px">
               Veja Nossas Obras Realizadas
             </button>
@@ -203,9 +203,9 @@
     </section>
     <div class="nav-mobile">
       <nav>
-        <a href="obras-model.html"><i class="fas fa-tools"></i></a>
-        <a href="index.html"><i class="fas fa-home"></i></a>
-        <a href="contato-eletroge.html"><i class="fas fa-envelope"></i></a>
+        <a href="/client/views/obras-model.html"><i class="fas fa-tools"></i></a>
+        <a href="/client/views/index.html"><i class="fas fa-home"></i></a>
+        <a href="/client/views/contato-eletroge.html"><i class="fas fa-envelope"></i></a>
       </nav>
     </div>
     <footer>
@@ -220,7 +220,7 @@
       </div>
       <div class="footer-section footer-white">
         <img
-          src="../img/logo-eletroge.png"
+          src="/client/img/logo-eletroge.png"
           alt="Logo EletroGe"
           class="img-eletroge-rodape"
         />
