--- a/public/client/views/contato-eletroge.html
+++ b/public/client/views/contato-eletroge.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/public/client/style.css" />
+  <link rel="stylesheet" href="/client/style.css" />
 
     <link
     rel="stylesheet"
@@ -20,15 +20,15 @@
   <body class="body-contact-us">
     <!--Cabeçalho-->
     <header>
-      <a href="index.html">
-        <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
+      <a href="/client/views/index.html">
+        <img src="/client/img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
       </a>
       <nav>
-        <a href="index.html"><i class="fas fa-home"></i> Início</a>
-        <a href="servicos-eletroge.html"
+        <a href="/client/views/index.html"><i class="fas fa-home"></i> Início</a>
+        <a href="/client/views/servicos-eletroge.html"
           ><i class="fas fa-tools"></i> Serviços</a
         >
-        <a href="contato-eletroge.html"
+        <a href="/client/views/contato-eletroge.html"
           ><i class="fas fa-envelope"></i> Contato</a
         >
       </nav>
@@ -60,9 +60,9 @@
     </main>
     <div class="nav-mobile">
       <nav>
-        <a href="obras-model.html"><i class="fas fa-tools"></i></a>
-        <a href="index.html"><i class="fas fa-home"></i></a>
-        <a href="contato-eletroge.html"><i class="fas fa-envelope"></i></a>
+        <a href="/client/views/obras-model.html"><i class="fas fa-tools"></i></a>
+        <a href="/client/views/index.html"><i class="fas fa-home"></i></a>
+        <a href="/client/views/contato-eletroge.html"><i class="fas fa-envelope"></i></a>
       </nav>
     </div>
 
@@ -79,7 +79,7 @@
       </div>
       <div class="footer-section footer-white">
         <img
-          src="../img/logo-eletroge.png"
+          src="/client/img/logo-eletroge.png"
           alt="Logo EletroGe"
           class="img-eletroge-rodape"
         />
