--- a/public/client/views/obras-model.html
+++ b/public/client/views/obras-model.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EletroGe</title>
-  <link rel="stylesheet" href="/public/client/style.css" />
+  <link rel="stylesheet" href="/client/style.css" />
 
     <link
     rel="stylesheet"
@@ -13,15 +13,15 @@
   </head>
   <body>
     <header>
-      <a href="index.html">
-        <img src="../img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
+      <a href="/client/views/index.html">
+        <img src="/client/img/logo-eletroge.png" alt="Logo EletroGe" class="logo" />
       </a>
       <nav>
-        <a href="index.html"><i class="fas fa-home"></i> Início</a>
-        <a href="servicos-eletroge.html"
+        <a href="/client/views/index.html"><i class="fas fa-home"></i> Início</a>
+        <a href="/client/views/servicos-eletroge.html"
           ><i class="fas fa-tools"></i> Serviços</a
         >
-        <a href="contato-eletroge.html"><i class="fas fa-envelope"></i> Contato</a>
+        <a href="/client/views/contato-eletroge.html"><i class="fas fa-envelope"></i> Contato</a>
       </nav>
     </header>
     <section class="quadros-wrapper">
@@ -53,9 +53,9 @@
     <!-- Rodapé -->
   <div class="nav-mobile">
       <nav>
-        <a href="obras-model.html"><i class="fas fa-tools"></i></a>
-        <a href="index.html"><i class="fas fa-home"></i></a>
-        <a href="contato-eletroge.html"><i class="fas fa-envelope"></i></a>
+        <a href="/client/views/obras-model.html"><i class="fas fa-tools"></i></a>
+        <a href="/client/views/index.html"><i class="fas fa-home"></i></a>
+        <a href="/client/views/contato-eletroge.html"><i class="fas fa-envelope"></i></a>
       </nav>
     </div>
     <footer>
@@ -70,12 +70,12 @@
       </div>
       <div class="footer-section footer-white">
         <img
-          src="../img/logo-eletroge.png"
+          src="/client/img/logo-eletroge.png"
           alt="Logo EletroGe"
           class="img-eletroge-rodape"
         />
       </div>
     </footer>
-    <script src="/public/client/script.js"></script>
+    <script src="/client/script.js"></script>
   </body>
 </html>
