feat: conexão com o banco de dados SUPABASE

--- a/public/client/views/servicos-eletroge.html
+++ b/public/client/views/servicos-eletroge.html
@@ -210,8 +210,8 @@
     </div>
     <footer>
       <div class="footer-section footer-yellow-light">
-        <div>Email: contato@eletroge.com</div>
-        <div>WhatsApp: (11) 91234-5678</div>
+        <div>Email: eletroge@eletroge.com.br</div>
+        <div>WhatsApp: (43) 9 9995-1092</div>
         <div>Telefone: (11) 1234-5678</div>
         <div>Av. Alexandre Santoro, 1381 Londrina - PR</div>
       </div>
