feat: ajuste de link html com o JS

--- a/public/adm/views/login.page.html
+++ b/public/adm/views/login.page.html
@@ -36,7 +36,7 @@
             <div class="col-3 d-flex flex-column justify-content-center">
                 <div class="row">
                     <div class="img-logo text-center">
-                        <img src="/public/client/img/logo-eletroge.png" width="200px" />
+                        <img src="/client/img/logo-eletroge.png" width="200px" />
                     </div>
                 </div>
                 <form>
@@ -86,6 +86,6 @@
         </div>
     </div>
     <!-- IMPORTANTE: Caminho correto do JS -->
-    <script type="module" src="../js/pages/login.page.js"></script>
+    <script type="module" src="/adm/js/pages/login.page.js"></script>
 </body>
 </html>
