--- a/public/adm/views/cadastrarObra.adm.html
+++ b/public/adm/views/cadastrarObra.adm.html
@@ -62,7 +62,7 @@
         <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container">
             <a class="navbar-brand text-dark fw-bold" href="dashboard.adm.html">
-            <img src="/public/client/img/logo-eletroge.png" width="100px" />
+            <img src="/client/img/logo-eletroge.png" width="100px" />
             </a>
 
             <div class="collapse navbar-collapse">
@@ -222,6 +222,6 @@
             </div>
         </div>
         </div>
-        <script type="module" src="../js/pages/createWork.page.js"></script>
+        <script type="module" src="/adm/js/pages/createWork.page.js"></script>
     </body>
     </html>
