--- a/public/adm/views/deletarObra.adm.html
+++ b/public/adm/views/deletarObra.adm.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container">
             <a class="navbar-brand text-dark fw-bold" href="dashboard.adm.html">
-                <img src="/public/client/img/logo-eletroge.png" width="100px" />
+                <img src="/client/img/logo-eletroge.png" width="100px" />
             </a>
 
             <div class="collapse navbar-collapse">
@@ -98,6 +98,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="../js/pages/deleteWork.page.js"></script>
+    <script type="module" src="/adm/js/pages/deleteWork.page.js"></script>
 </body>
 </html>
