--- a/public/adm/views/editarObra.adm.html
+++ b/public/adm/views/editarObra.adm.html
@@ -59,7 +59,7 @@
     <nav class="navbar navbar-expand-lg bg-warning">
         <div class="container">
             <a class="navbar-brand text-dark fw-bold" href="dashboard.adm.html">
-                <img src="/public/client/img/logo-eletroge.png" width="100px" />
+                <img src="/client/img/logo-eletroge.png" width="100px" />
             </a>
 
             <div class="collapse navbar-collapse">
@@ -224,6 +224,6 @@
             </div>
         </div>
     </div>
-    <script type="module" src="../js/pages/editWork.page.js"></script>
+    <script type="module" src="/adm/js/pages/editWork.page.js"></script>
 </body>
 </html>
