--- a/public/adm/views/dashboard.adm.html
+++ b/public/adm/views/dashboard.adm.html
@@ -99,6 +99,9 @@
 
         </div>
     </div>
-
+    <script type="module">
+            import { requireAuth } from '/adm/js/utils/auth.utils.js';
+            requireAuth();
+        </script>
 </body>
 </html>
