--- a/public/adm/views/editarObra.adm.html
+++ b/public/adm/views/editarObra.adm.html
@@ -225,5 +225,9 @@
         </div>
     </div>
     <script type="module" src="/adm/js/pages/editWork.page.js"></script>
+    <script type="module">
+            import { requireAuth } from '/adm/js/utils/auth.utils.js';
+            requireAuth();
+        </script>
 </body>
 </html>
