ajuste no link do JS com a pagina HTML

--- a/public/client/views/obras.html
+++ b/public/client/views/obras.html
@@ -58,6 +58,6 @@
         />
       </div>
     </footer>
-    <script src="/client/script.js"></script>
+    <script src="/client/script.obras.js"></script>
   </body>
 </html>
